# ami-deprecation-tool

./: pyproject.toml  tox.ini
.github/workflows/: pr.yaml
snap/: snapcraft.yaml
